--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       });
       var typed_options = {
         strings: [
-          "祝愿您在2025年：",
+          "祝愿你在2025年：",
           "学习进步，日子红红火火；",
           "生活多姿多彩，幸福如影随形；",
           "身体健康平安，家庭和乐美满；",
