--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git branch --unset-upstream<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -78,7 +78,7 @@
           "学习进步，日子红红火火；",
           "生活多姿多彩，幸福如影随形；",
           "身体健康平安，家庭和乐美满；",
-          "愿您的每一个梦想都能实现，每一天都充满喜悦和希望！🎉🎊",
+          "愿你的每一个梦想都能实现，每一天都充满喜悦和希望！🎉🎊",
           "蒲仕祥过年好！",
         ],
         typeSpeed: 200,
