--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ git branch --unset-upstream<!DOCTYPE html>
       style="background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(3.2px)"
       id="pre"
     >
-      <div class="words text-white mb-6">happy new 2025 for 蒲仕祥</div>
+      <div class="words text-white mb-6">happy new year in 2025 for 蒲仕祥</div>
       <button onclick="startFireworks()" id="start-button">
         V I E W
         <div id="clip">
