--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ git branch --unset-upstream<!DOCTYPE html>
       </button>
       <div class="bottom-8 w-screen left-0 absolute text-white">
         <div class="container mx-auto max-w-xl text-sm opacity-60">
-          Write it by
+          Write by
           <a href="" target="_blank" nofollow noopener
             >YinHai</a
           >.&emsp;
