--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Happy New Year</title>
+  <title>Happy New Year!  -- CSS Only </title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -125,7 +125,7 @@
         transform: scale(0.95);
     }
 </style>
-<div style=" text-align: center;">
+<div style=" text-align: center;width: auto;margin-top: 480px;margin-left: 800px;" >
   <a href="./index1.html">点击我</a>
 </div>
 </div>
