--- a/index1.html
+++ b/index1.html
@@ -22,9 +22,9 @@
       style="background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(3.2px)"
       id="pre"
     >
-      <div class="words text-white mb-6">happy new 2025 for 蒲仕祥</div>
+      <div class="words text-white mb-6">happy new year 2025 for 蒲仕祥</div>
       <button onclick="startFireworks()" id="start-button">
-        V I E W
+        view
         <div id="clip">
           <div id="leftTop" class="corner"></div>
           <div id="rightBottom" class="corner"></div>
