--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
       style="background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(3.2px)"
       id="pre"
     >
-      <div class="words text-white mb-6">happy new year 2025 for 蒲仕祥</div>
+      <div class="words text-white mb-6">happy new year 2025 for 浦仕祥</div>
       <button onclick="startFireworks()" id="start-button">
         view
         <div id="clip">
@@ -79,7 +79,7 @@
           "生活多姿多彩，幸福如影随形；",
           "身体健康平安，家庭和乐美满；",
           "愿你的每一个梦想都能实现，每一天都充满喜悦和希望！🎉🎊",
-          "蒲仕祥过年好！",
+          "浦仕祥过年好！",
         ],
         typeSpeed: 200,
       };
